# ChangeLog for app-misc/hal-info
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.57 2009/03/08 21:45:18 josejx Exp $

  08 Mar 2009; Joseph Jezak <josejx@gentoo.org> hal-info-20081219.ebuild:
  Marked ppc64 for bug #259080.

  21 Feb 2009; Jeroen Roovers <jer@gentoo.org> hal-info-20081219.ebuild:
  Stable for HPPA (bug #259080).

  17 Feb 2009; Raúl Porcel <armin76@gentoo.org> hal-info-20081219.ebuild:
  arm/ia64/sh/sparc/x86 stable wrt #259080

  17 Feb 2009; <chainsaw@gentoo.org> hal-info-20081219.ebuild:
  Mark stable on AMD64 for bug #259080 based on an arch tester report by
  Víctor Enríquez <victor.quicksilver@gmail.com>.

  16 Feb 2009; Raúl Porcel <armin76@gentoo.org> hal-info-20081219.ebuild:
  alpha stable wrt #259080

  16 Feb 2009; <chainsaw@gentoo.org> hal-info-20081219.ebuild:
  Stable on PowerPC for bug #259080, based on arch testing by Christian
  Schmitt <chrschmitt@gmail.com>.

*hal-info-20090202 (04 Feb 2009)

  04 Feb 2009; <chainsaw@gentoo.org> metadata.xml,
  +hal-info-20090202.ebuild:
  Version bump, closes bug #257464 by Gilles Dartiguelongue
  <eva@gentoo.org>.

  21 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  hal-info-20081219.ebuild:
  keyword ~x86-fbsd

  19 Jan 2009; Raúl Porcel <armin76@gentoo.org> hal-info-20081219.ebuild:
  Add ~arm/~sh

*hal-info-20081219 (18 Jan 2009)

  18 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +hal-info-20081219.ebuild:
  Bump to 20081219, bug #241912.

  13 Jan 2009; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  gentopia is becoming freedesktop

  23 Dec 2008; Doug Goldstein <cardoe@gentoo.org> -hal-info-20070425.ebuild,
  -hal-info-20070516.ebuild, -hal-info-20071011.ebuild,
  -hal-info-20071030.ebuild, -hal-info-20080310.ebuild:
  remove old unsupported versions

  28 Oct 2008; Markus Rothe <corsair@gentoo.org> hal-info-20080508.ebuild:
  Stable on ppc64
