@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 01_dell_cdrom_nopoll.patch 1014 RMD160 42436b161a7d1edd17103b7a2e0fab23aedec59e SHA1 689c6c7319202a582e7ad350c5a964236d0d9598 SHA256 e243f1af9f87f43c8c2358516c8aee73f449e8ddd70059e7209d10027bf97111
 AUX 02_hardware_brightness_fixups.patch 1021 RMD160 e0428972bc20b2218484f4efc0ec8cc717056446 SHA1 8a288ea79dd1df83709bfd261e4c7f49484a8c60 SHA256 fa538c448162e78a3a0088251ecdd7accca87ad93abf75dde6e0246392130e4a
 AUX 03_feiya_memory_bar.patch 1002 RMD160 56f39919ed51d368aa0ab079b9ee9fb2a57f428c SHA1 196315b6735f84a03ab5332d1d126a5afaa9695d SHA256 8a55225bf216ade7785ff80d879e4df32d8924127872e7cfb9fa4d676e793e36
@@ -5,9 +8,18 @@ DIST hal-info-20070618.tar.gz 118985 RMD160 cbd8db973663f755397d128beddb0a0b2cce
 DIST hal-info-20080508.tar.gz 202719 RMD160 c24bbe6b161fe3fa6a2e6f989880d25069bb0fc6 SHA1 a2b3dafb6fca8ec11948039424c79b0dfe7133ad SHA256 80655b3531ea56a5d64085e572dfb8d3ecabffd28af482cd130f72dfdd6254b0
 DIST hal-info-20081219.tar.gz 235508 RMD160 2e81127e95050818121020c17ac34a2a81863b3f SHA1 d2231f32133eac4ab53f4e13b68df9f2027dc0e0 SHA256 793f235589078138efe782f835bd4674ecd656344d2c6d1181fa35d5d5a075ba
 DIST hal-info-20090202.tar.gz 241540 RMD160 c603a692a3384b07dc3ea39989493dd5e12ef9cc SHA1 6eeed8b4bd41822e24b5710a1b299833b810a386 SHA256 2c21551813567e4dd374acb0c33c7470f4bf7180f24a5a89f445510488c1ff2b
+DIST hal-info-20090309.tar.gz 137220 RMD160 aef8784f2682faec4c88e6f4e0526ea2889f027d SHA1 e0fb80bf710b7dc7bd48301c42cb52bca16107d0 SHA256 73a06d5f308cd95e330d089a0f3197e64512d900780088e9b14751a406ef4788
 EBUILD hal-info-20070618.ebuild 718 RMD160 5b4ed5eeec405640cafa105b977d5fe4103c5a0d SHA1 6b5cb40149a5f4870a50eaad1a896428a3cd14b5 SHA256 843310294d4fbe53aa30752910ebbc6eb96f0a17cf6cd59df1ad5a65622f295e
 EBUILD hal-info-20080508.ebuild 683 RMD160 4cf8cf3055013a71d11ce694b7bbf77dad7efe2c SHA1 817f8be370322e4dd6f668d873280dddc5b51588 SHA256 ee31bffe8777b2aca951b917cf442b34a5b209d1454752698a378c3446300cb8
 EBUILD hal-info-20081219.ebuild 674 RMD160 8f48404d5fc75d79d2d724353c131afd50c874ea SHA1 100191d7777fe7a9aff2f4cf0c941efeddd0ae7a SHA256 16498cb62f3ed560ca4cd121e2d14620a83874413d1ef3d0738fcd344d770b84
 EBUILD hal-info-20090202.ebuild 686 RMD160 85120c7e97355d9844285d6ca814042e1deb0e1c SHA1 4e84a32e4995df2a14db6d7aab4b9ae6f5471ae8 SHA256 486d3d1c247aa4a01cc5337d2f16aff1f6196798845ef32257bc4491c547dfa0
-MISC ChangeLog 7913 RMD160 c08f63de1b0d7a3f52f95889a20406d623314119 SHA1 53e08f82de0392c9dc2e29489c652efd90721bc1 SHA256 1ac8445252519fe65d33432adb73b48de0551ca04c187a2eed54e169ef9f0063
+EBUILD hal-info-20090309.ebuild 681 RMD160 ff146312752ff19fffb477113149f2b30f9fc8b2 SHA1 980f7f8f9110d2ce9da122cc1ae289fbd189b7ad SHA256 09eaaf2d353d0f49dc7545979d744fbfd1913911cb5159c5849b1534a1081f8e
+MISC ChangeLog 8048 RMD160 2f34a57d2eb55b6b200cb0c88fa2f1eb57ff4386 SHA1 444f351ed32a0dac1230f97c1be6287b6b1587a8 SHA256 bdc0ae747debbe2bc27f4fd7fb389600acce188dac548ad3acd79ceaa54ac133
 MISC metadata.xml 228 RMD160 66777190ef5d850d1d28e7a492391b0a0a909ba4 SHA1 80a14aeb519bd1dc784d6397e792e5c4f771cb66 SHA256 4e633a08dcc22e590609d7a9b5ce955dc38184e2761674eed4a898cd9d9cb17c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.10 (GNU/Linux)
+
+iEYEARECAAYFAkm1oiUACgkQ1fmVwcYIWAYl2gCgp98DT6ex9JEjJYniiet920tt
+/s4AoMV0ZCcq/rN8r8JDznh0c7uKFWyY
+=k0T4
+-----END PGP SIGNATURE-----
