@@ -1,0 +1,26 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/hal-info-20090309.ebuild,v 1.1 2009/03/09 23:11:27 eva Exp $
+
+inherit eutils
+
+DESCRIPTION="The fdi scripts that HAL uses"
+HOMEPAGE="http://hal.freedesktop.org/"
+SRC_URI="http://hal.freedesktop.org/releases/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+RDEPEND=">=sys-apps/hal-0.5.10"
+DEPEND="${RDEPEND}"
+
+src_compile() {
+	econf
+	emake || die "emake failed"
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "install failed."
+}
