@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/hal-info
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.57 2009/03/08 21:45:18 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.58 2009/03/09 23:11:27 eva Exp $
+
+*hal-info-20090309 (09 Mar 2009)
+
+  09 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +hal-info-20090309.ebuild:
+  Bump to 20090309.
 
   08 Mar 2009; Joseph Jezak <josejx@gentoo.org> hal-info-20081219.ebuild:
   Marked ppc64 for bug #259080.
